// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compilev2 compile "HTML: WITH_START_ANCHOR_OFFSET" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Foo Bar",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "anchorStart": "header2",
                "anchorStartOffset": 1,
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 19,
              "line": 2,
              "offset": 28,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 10,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 19,
          "line": 2,
          "offset": 28,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 10,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 19,
      "line": 2,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`compilev2 compile "HTML: WITH_START_ANCHOR_OFFSET" 2`] = `
VFile {
  "contents": "# Foo Bar

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  task2


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "HTML: recursive" 1`] = `
VFile {
  "contents": "<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.one</span></div>
  <a href=\\"foo.one.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  # Foo.One

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.two</span></div>
  <a href=\\"foo.two.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  # Foo.Two

blah


</div>    
  </div>
Regular wikilink: 


</div>    
  </div>


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "HTML: regular" 1`] = `
VFile {
  "contents": "<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  foo body


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "HTML: wildcard" 1`] = `
VFile {
  "contents": "<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.01</span></div>
<a href=\\"journal.2020.08.01.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
journal1


</div>    
</div><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.02</span></div>
<a href=\\"journal.2020.08.02.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
journal2


</div>    
</div><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.03</span></div>
<a href=\\"journal.2020.08.03.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
journal3


</div>    
</div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_DENDRON: WITH_END_ANCHOR_INVALID" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Foo Bar",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "anchorEnd": "badheader",
                "anchorStart": "header1",
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 28,
              "line": 2,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 10,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 28,
          "line": 2,
          "offset": 37,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 10,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 28,
      "line": 2,
      "offset": 37,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`compilev2 compile "MD_DENDRON: WITH_END_ANCHOR_INVALID" 2`] = `
VFile {
  "contents": "# Foo Bar

![[foo#header1:#badheader]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_DENDRON: WITH_START_ANCHOR_INVALID" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Foo Bar",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "anchorStart": "badheader",
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 19,
              "line": 2,
              "offset": 28,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 10,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 19,
          "line": 2,
          "offset": 28,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 10,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 19,
      "line": 2,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`compilev2 compile "MD_DENDRON: WITH_START_ANCHOR_INVALID" 2`] = `
VFile {
  "contents": "# Foo Bar

![[foo#badheader]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_DENDRON: recursive" 1`] = `
VFile {
  "contents": "![[foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_DENDRON: regular" 1`] = `
VFile {
  "contents": "![[foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_DENDRON: wildcard" 1`] = `
VFile {
  "contents": "((ref:[[journal.2020.08.*]]))

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_ENHANCED_PREVIEW: WITH_FM_TITLE": bond 1`] = `
VFile {
  "contents": "# Foo

# Foo Bar


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  ## Header2

task2
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_ENHANCED_PREVIEW: WITH_START_ANCHOR_OFFSET" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Foo Bar",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "anchorStart": "header2",
                "anchorStartOffset": 1,
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 19,
              "line": 2,
              "offset": 28,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 10,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 19,
          "line": 2,
          "offset": 28,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 10,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 19,
      "line": 2,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`compilev2 compile "MD_ENHANCED_PREVIEW: WITH_START_ANCHOR_OFFSET" 2`] = `
VFile {
  "contents": "# Foo Bar


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  task2
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_ENHANCED_PREVIEW: recursive" 1`] = `
VFile {
  "contents": "
  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.one</span></div>
  <a href=\\"foo.one.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  # Foo.One

  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.two</span></div>
  <a href=\\"foo.two.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  # Foo.Two

blah

  </div>    
  </div>
  
Regular wikilink: [foo.two](foo.two.md)
  
  </div>    
  </div>
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_ENHANCED_PREVIEW: regular" 1`] = `
VFile {
  "contents": "
  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  foo body
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_ENHANCED_PREVIEW: wildcard" 1`] = `
VFile {
  "contents": "
<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.01</span></div>
<a href=\\"journal.2020.08.01.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        

journal1

</div>    
</div>


<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.02</span></div>
<a href=\\"journal.2020.08.02.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        

journal2

</div>    
</div>


<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.03</span></div>
<a href=\\"journal.2020.08.03.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        

journal3

</div>    
</div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_REGULAR: WITH_START_ANCHOR_OFFSET" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Foo Bar",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "anchorStart": "header2",
                "anchorStartOffset": 1,
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 19,
              "line": 2,
              "offset": 28,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 10,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 19,
          "line": 2,
          "offset": 28,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 10,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 19,
      "line": 2,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`compilev2 compile "MD_REGULAR: WITH_START_ANCHOR_OFFSET" 2`] = `
VFile {
  "contents": "# Foo Bar

task2


",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_REGULAR: recursive" 1`] = `
VFile {
  "contents": "# Foo.One

# Foo.Two

blah

Regular wikilink: [foo.two](foo.two)


",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_REGULAR: regular" 1`] = `
VFile {
  "contents": "foo body


",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_REGULAR: wildcard" 1`] = `
VFile {
  "contents": "journal1

journal2

journal3


",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`parse init 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "indent": Array [],
            "start": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
          },
          "type": "text",
          "value": "))",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse init with inject 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse init with inject 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "error processing ref",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "root",
            },
          ],
          "type": "paragraph",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse with start anchor 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "anchorStart": "h1",
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "indent": Array [],
            "start": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
          },
          "type": "text",
          "value": "))",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse with start and end 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "anchorEnd": "h2",
                "anchorStart": "h1",
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "indent": Array [],
            "start": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "type": "text",
          "value": "))",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse without extension 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "link": Object {
              "data": Object {
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "refLinkV2",
          "value": "foo",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "indent": Array [],
            "start": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "))",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
